--- a/src/App.css
+++ b/src/App.css
@@ -11,8 +11,7 @@ html {
 }
 
 .App {
-    background: conic-gradient(from 182.3deg at 33.11% 13.99%, #000000 -101.25deg, #000000 30deg, #3117D0 101.25deg, #000000 258.75deg, #000000 390deg);
-    background-attachment: fixed;
+   
     color: white;
 }
 
@@ -20,6 +19,7 @@ html {
     display: flex;
     background-color: black;
     color: white;
+    justify-content: space-around;
 }
 
 #rec_played_grid {
@@ -27,6 +27,20 @@ html {
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(3, 1fr);
 
+}
+
+.footer_item{
+    padding: 2%;
+    text-align: center;
+    width: 100%;
+}
+
+.footer_item img{
+    width: 35%;
+}
+
+.footertext{
+    margin: 0;
 }
 
 #recently_played_entry {
@@ -40,25 +54,41 @@ html {
 }
 
 #recently_played_entry img{
-    width: 25%;
+    width: 20%;
 }
 
 .large{
     font-family: 'Gothic A1', sans-serif;
     font-size: 1.5em;
+    margin-left: 2%;
 }
 
 .sidebysidealbums {
     display: flex;
     width: 100%;
+    justify-content: space-around;
 }
 
 .selected{
-    color:red;
+    color:white;
+    fill: white;
+    stroke: white !important;
+}
+
+.unselected{
+    stroke: grey !important;
+
 }
 
 #top{
+    padding-left: 2%;
     display: flex;
+    font-size: 2em;
+    justify-content: space-around;
+}
+
+#top img{
+    width: 5%;
 }
 
 .rec_played_text{
@@ -67,28 +97,35 @@ html {
     font-family: 'Gothic A1', sans-serif;
 }
 
-#homepage{
-    margin-left: 5%;
-    margin-right: 5%;
-
+#background{
+    background: conic-gradient(from 182.3deg at 33.11% 13.99%, #000000 -101.25deg, #000000 30deg, #3117D0 101.25deg, #000000 258.75deg, #000000 390deg);
+    background-attachment: fixed;
+    position: fixed;
+    width: 810px;
+    position: fixed;
+    height: 100%;
+    z-index: -10;
+    opacity: 0.9;
 }
+
 
 .albumdivleft{
     margin-right: 0;
     max-width: 100%;
-    margin-right: -1%;
+    margin-right: 1%;
+
 
 }
 .albumdivright{
-    margin-left: -1%;
     max-width: 100%;
+    margin-left: 1%;
 
 }
 .albumdivleft img{
-    width: 95%;
+    width: 100%;
 }
 .albumdivright img{
-    width: 95%;
+    width: 100%;
 }
 
 #bottomhome{
