--- a/src/App.css
+++ b/src/App.css
@@ -131,3 +131,28 @@ html {
 #bottomhome{
     margin-bottom: 10%;
 }
+
+.discover{
+    margin-bottom: -1%;
+    position: relative;
+}
+
+
+.gif{
+    width: 100%;
+    z-index: -10;
+    height: 100vh;
+}
+
+.discover_buttons {
+    position: absolute;
+    width: 8%;
+    z-index: 10;
+    right: 5%;
+    bottom: 5%;
+    text-align: center;
+}
+
+.discover_buttons img{
+    margin: 20%;
+}
