--- a/src/App.css
+++ b/src/App.css
@@ -1,191 +1,448 @@
-@import url('https://fonts.googleapis.com/css2?family=Gothic+A1&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Rubik:wght@400;700;900&display=swap");
 
 html {
-    min-height: 100%;
-    width: 810px;
-    height: 100vh;
+  min-height: 100%;
+  width: 810px;
+  height: 100vh;
 }
 
-#homepage{
-    height: 100%;
+.homepage {
+  height: 85%;
+  position: relative;
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
+
+.homepage::-webkit-scrollbar {
+  display: none;
+  /* Chrome */
+}
+
+.library {
+  height: 85%;
+  position: relative;
+  overflow-x: hidden;
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
+
+.library::-webkit-scrollbar {
+  display: none;
+  /* Chrome */
+}
+
+.discover {
+  height: 85%;
+  position: relative;
+  overflow: hidden;
 }
 
 .App {
-    font-family: 'Gothic A1', sans-serif;
-   
-    color: white;
+  font-family: "Rubik", sans-serif;
+  color: white;
+}
+
+@media screen and (min-width: 300px) {
+  body {
+    height: 100vh;
+  }
+  .App {
+    /* Apply some styles */
+    height: 100vh;
+  }
+}
+
+.spotify-container {
+  width: 100%;
+  height: 677px;
+  z-index: 100;
+  border-radius: 3px;
+  overflow: auto;
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
+
+.spotify-container::-webkit-scrollbar {
+  display: none;
+  /* Chrome */
 }
 
 .footer {
-    display: flex;
-    background-color: black;
-    color: white;
-    justify-content: space-around;
+  display: flex;
+  background-color: black;
+  color: white;
+  justify-content: space-around;
+  height: 100px;
+  overflow: hidden;
+  position: fixed;
+  border-radius: 3px 3px 3px 3px;
+  width: 90%;
+  padding-bottom: 10px;
 }
 
 #rec_played_grid {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(3, 1fr);
-
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(3, 1fr);
+  margin: 0 2% 0 2%;
 }
 
-.footer_item{
-    padding: 2%;
-    text-align: center;
-    width: 100%;
+.footer_item {
+  padding: 2%;
+  text-align: center;
+  width: 100%;
 }
 
-.footer_item img{
-    width: 35%;
+.footer_item svg {
+  width: 40%;
+  padding: 0;
+  margin: 0;
 }
 
-.footertext{
-    margin: 0;
+.footertext {
+  margin: 0;
+  padding: 0;
+  font-size: 12px;
 }
 
 #recently_played_entry {
-    display: flex;
-    background-color: grey;
-    color: white;
-    margin: 1%;
-    align-items: center;
-    border-radius: 15px;
-    width: 95%;
+  display: flex;
+  background-color: #555555;
+  color: white;
+  margin: 3%;
+  align-items: center;
+  border-radius: 5px;
+  height: 50px;
+
+  width: 95%;
 }
 
-#recently_played_entry img{
-    width: 20%;
+#recently_played_entry img {
+  width: 35%;
+  height: 100%;
 }
 
-.large{
-    font-family: 'Gothic A1', sans-serif;
-    font-size: 1.5em;
-    margin-left: 2%;
+.large {
+  font-family: "Rubik", sans-serif;
+  font-weight: 700;
+  font-size: 24px;
+  margin: 20px 0 10px 2%;
 }
 
 .sidebysidealbums {
-    display: flex;
-    width: 100%;
-    justify-content: space-around;
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
 }
 
-.selected{
-    color:white;
-    fill: white;
-    stroke: white !important;
+.sidebysidealbums img {
+  padding: 5%;
 }
 
-.unselected{
-    stroke: grey !important;
-
+.selected {
+  color: white;
+  fill: white;
+  stroke: white !important;
 }
 
-#top{
-    padding-left: 2%;
-    display: flex;
-    font-size: 2em;
-    justify-content: space-around;
+.unselected {
+  stroke: grey !important;
 }
 
-#top img{
-    width: 5%;
+#top {
+  padding-left: 2%;
+  display: flex;
+  font-size: 24px;
+  font-weight: 700;
+  justify-content: space-between;
+  align-content: stretch;
+  width: 100%;
+  padding-top: 3%;
 }
 
-.rec_played_text{
-    margin-left: 5%;
-    font-size: 1.3em;
-    font-family: 'Gothic A1', sans-serif;
+.top-greeting {
+  flex-grow: 4;
+  min-width: 200px;
 }
 
-#background{
-    background: conic-gradient(from 182.3deg at 33.11% 13.99%, #000000 -101.25deg, #000000 30deg, #3117D0 101.25deg, #000000 258.75deg, #000000 390deg);
-    background-attachment: fixed;
-    position: fixed;
-    width: 810px;
-    position: fixed;
-    height: 100%;
-    z-index: -10;
-    opacity: 0.9;
+.top-icons {
+  display: flex;
+  justify-content: space-around;
 }
 
-
-.albumdivleft{
-    margin-right: 0;
-    max-width: 100%;
-    margin-right: 1%;
-
-
-}
-.albumdivright{
-    max-width: 100%;
-    margin-left: 1%;
-
-}
-.albumdivleft img{
-    width: 100%;
-}
-.albumdivright img{
-    width: 100%;
+#top img {
+  width: 15%;
 }
 
-#bottomhome{
-    margin-bottom: 10%;
+.rec_played_text {
+  margin-left: 5%;
+  margin-right: 5%;
+  font-size: 14px;
+  font-family: "Rubik", sans-serif;
+  font-weight: 700;
 }
 
-.discover{
-    margin-bottom: -1%;
-    position: relative;
+.lib_header {
+  margin: 5%;
 }
 
+.lib-greeting {
+  font-family: "Rubik", sans-serif;
+  font-size: 24px;
+  font-weight: 700;
+  margin-bottom: 0;
+}
 
-.gif{
-    width: 100%;
-    z-index: -10;
-    height: 100vh;
+.lib-greeting svg {
+  height: 14px;
+  width: 14px;
+}
+
+.lib-greeting p {
+  margin-bottom: 0;
+  margin-top: 15px;
+}
+
+.lib-sub {
+  font-size: 13px;
+  color: #b3b3b3;
+}
+
+#background {
+  background: conic-gradient(
+    from 182.3deg at 33.11% 13.99%,
+    #000000 -101.25deg,
+    #000000 30deg,
+    #3117d0 101.25deg,
+    #000000 258.75deg,
+    #000000 390deg
+  );
+  background-attachment: fixed;
+  position: fixed;
+  width: 375px;
+  height: 677px;
+  z-index: -1;
+  opacity: 0.9;
+}
+
+.albumdivleft {
+  margin-right: 0;
+  max-width: 100%;
+  margin-right: 1%;
+}
+.albumdivright {
+  max-width: 100%;
+  margin-left: 1%;
+}
+.albumdivleft img {
+  width: 100%;
+}
+.albumdivright img {
+  width: 100%;
+}
+
+#bottomhome {
+  padding: 0 2% 30% 2%;
+}
+
+.gif {
+  width: 100%;
+  z-index: -10;
+  height: 600px;
 }
 
 .discover_buttons {
-    position: absolute;
-    width: 8%;
-    z-index: 10;
-    right: 5%;
-    bottom: 5%;
-    text-align: center;
+  position: absolute;
+  width: 8%;
+  z-index: 10;
+  right: 5%;
+  bottom: 5%;
+  text-align: center;
 }
 
-.discover_buttons img{
-    margin: 20%;
+.discover_buttons img {
+  margin: 20%;
 }
 
-.library{
-    margin-top: -2%;
+.discover_title {
+  font-size: 24px;
+  margin: 14px 0 0 0;
+  font-weight: 700;
 }
 
-.likes{
-    padding-left: 1%;
-    padding-right: 1%;
+.discover_artist {
+  margin: 10px 0 0 0;
+}
+
+.likes {
+  padding-left: 1%;
+  padding-right: 1%;
+  padding-bottom: 2%;
+}
+
+.download svg {
+  color: #b3b3b3;
+  height: 25px;
+  width: 25px;
+}
+
+.play-button {
+  position: relative;
+  width: 50%;
+  height: 150px;
+}
+
+.btn-play svg {
+  position: relative;
+  top: 58%;
+  left: 85%;
+  height: 50px;
+  width: 50px;
+}
+
+.like-top {
+  display: flex;
 }
 
 #genres {
-    display: flex;
-    justify-content: space-between;
+  display: flex;
+  justify-content: flex-start;
+  flex-wrap: wrap;
 }
 
 .genre {
-    border: solid;
-    border-radius: 15px;
-    padding-left: 2%;
-    padding-right: 2%;
-    font-family: 'Gothic A1', sans-serif;
-
+  border: 1px solid #b3b3b3;
+  border-radius: 50px;
+  padding-left: 15px;
+  padding-right: 15px;
+  padding-top: 3px;
+  padding-bottom: 5px;
+  font-family: "Rubik", sans-serif;
+  font-weight: 400;
+  margin: 0 5px 8px 0;
 }
 
-.liked{
-    display: flex;
-    justify-content: space-between;
+.add_song {
+  display: flex;
 }
 
-#leftlikes{
-    display: flex;
+.add {
+  height: 50px;
+  width: 50px;
+  text-align: center;
+  font-size: 30px;
+  margin: 0 10px 5% 6%;
+  background-color: #393939;
+}
+
+.add p {
+  padding: 0 0 0 0;
+  margin: 5px 0 0 0;
+}
+
+.add_text p {
+  font-size: 16px;
+  font-weight: 400;
+  margin: 15px 0 0 5px;
+}
+
+.liked {
+  display: flex;
+
+  margin: 0 5% 5% 5%;
+  justify-content: space-between;
+}
+
+.song-info {
+  display: flex;
+}
+
+.song-info img {
+  height: 50px;
+  width: 50px;
+}
+
+.song-title {
+  font-size: 16px;
+  font-weight: 700;
+}
+
+.song-artist {
+  font-size: 12px;
+  color: #b3b3b3;
+}
+
+.song-desc {
+  margin: 10px 0 0 10px;
+}
+
+.song-desc p {
+  margin: 0;
+  padding: 0;
+}
+
+.likes-icons {
+  display: flex;
+  justify-content: space-between;
+  width: 30%;
+  font-size: 14px;
+}
+
+.likes-icons {
+  padding: 10px;
+}
+
+.icon-heart {
+  height: 20px;
+}
+.icon-dots {
+  height: 5px;
+}
+
+.discover_body {
+  position: absolute;
+  display: flex;
+  height: 150px;
+  width: 100%;
+  top: 75%;
+  background: rgb(2, 0, 36);
+  background: linear-gradient(
+    0deg,
+    rgba(2, 0, 36, 0.7763480392156863) 0%,
+    rgba(0, 0, 0, 0) 100%,
+    rgba(78, 78, 157, 1) 100%
+  );
+}
+
+.discover_bio {
+  position: relative;
+
+  top: 30%;
+  left: 5%;
+  right: 5%;
+}
+.discover_buttons {
+  position: absolute;
+  margin-bottom: 20px;
+  margin-right: 5%;
+}
+
+.friend {
+  display: flex;
+  background-color: #000000;
+}
+
+.friend img {
+  height: 50px;
+  margin: 10px;
+  position: relative;
+  top: 20%;
+}
+
+.friend_listening {
+  padding: 0 5% 5% 10%;
+}
+
+.friend_title {
+  margin: 0;
 }
