--- a/src/App.css
+++ b/src/App.css
@@ -546,24 +546,26 @@ html {
     display: flex;
 }
 
-.is_blurred{
+.is_blurred {
     backdrop-filter: blur(6px);
     z-index: -1;
 }
+
 /* modals */
 .options {
     background-color: rgba(99, 99, 99, 0.5);
-    height: 100vh;
+    height: inherit;
     position: absolute;
-    width: 100%;
+    width: 90%;
     z-index: 999;
-    top: 0%;
+    top: 10%;
     display: flex;
-    flex-direction: column;   
+    flex-direction: column;
     transition: all 0.3s linear;
 
 }
-.options_top{
+
+.options_top {
     display: flex;
     flex-direction: column;
     text-align: center;
@@ -571,34 +573,93 @@ html {
     margin-right: 25%;
     margin-top: 10%;
 }
+
 .options_top p {
     margin: 0;
 }
 
-.options_top img{
+.options_top img {
     width: 25%;
 }
 
-.options_sel{
-    display: flex;
-    flex-direction: column;
+.options_sel {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
     margin-left: 5%;
     margin-right: 5%;
     font-size: 1.2em;
-
 }
 
-.option{
+.option {
     display: flex;
 }
-.option img{
+
+.option img {
     width: 8% !important;
     margin-right: 5%;
 }
 
-#options_close{
+#options_close {
     text-align: center;
     font-weight: 500;
-    font-size: 1.2em;
+    font-size: 1em;
     margin-top: 0%;
 }
+
+.share_top {
+    display: flex;
+    flex-direction: row;
+    margin-left: 15%;
+    margin-right: 15%;
+    margin-top: 10%;
+    align-items: center;
+    margin-bottom: 10%;
+}
+
+.share_top p {
+    margin: 0;
+}
+
+.share_top img {
+    width: 40% !important;
+    margin-right: 5%;
+}
+
+.share_friends {
+    position: relative;
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.share_picandname {
+    display: flex;
+    align-items: center;
+    white-space: nowrap;
+}
+
+.share_picandname img {
+    width: 25% !important;
+    height: 25%;
+    border-radius: 50%;
+    margin-right: 5%;
+}
+
+.share_picandname p {
+}
+
+
+.share_buttons{
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    text-align: center;
+}
+.button_container{
+    padding: 1%;
+}
+.button_container img {
+    width: 50% !important;
+}
+
