--- a/src/App.css
+++ b/src/App.css
@@ -622,7 +622,7 @@ html {
 }
 
 .share_top img {
-    width: 40% !important;
+    width: 30% !important;
     margin-right: 5%;
 }
 
@@ -641,26 +641,59 @@ html {
 }
 
 .share_picandname img {
-    width: 25% !important;
+    width: 20% !important;
     height: 25%;
     border-radius: 50%;
     margin-right: 5%;
 }
 
 .share_picandname p {
+    font-size: 0.8em;
 }
 
 
-.share_buttons{
+.share_buttons {
+    padding-left: 5%;
+    padding-right: 5%;
+    padding-top: 5%;
+    padding-bottom: 5%;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(2, 1fr);
     text-align: center;
 }
-.button_container{
-    padding: 1%;
+
+.center {
+    text-align: center;
+    margin-bottom: 5%;
 }
+
+.button_container {
+    padding: 1%;
+    margin-bottom: 5%;
+}
+
 .button_container img {
     width: 50% !important;
 }
 
+.button_container p {
+    margin: 0;
+}
+
+.sharebutton {
+    background-color: #03CE17;
+    color: white;
+    border: none;
+    border-radius: 25px;
+    padding-left: 8%;
+    padding-right: 8%;
+    padding-top: 3%;
+    padding-bottom: 3%;   
+}
+
+.share_check{
+    height: 50%;
+    width: 20%;
+    filter: invert(100%) hue-rotate(90deg) brightness(1);
+}
