--- a/src/App.css
+++ b/src/App.css
@@ -1,713 +1,723 @@
 @import url("https://fonts.googleapis.com/css2?family=Rubik:wght@400;700;900&display=swap");
 
 html {
-    min-height: 100%;
-    width: 810px;
-    height: 100vh;
+  min-height: 100%;
+  width: 810px;
+  height: 100vh;
 }
 
 .homepage {
-    height: 85%;
-    position: relative;
-    -ms-overflow-style: none;
-    /* IE and Edge */
-    scrollbar-width: none;
-    /* Firefox */
+  height: 85%;
+  position: relative;
+  -ms-overflow-style: none;
+  /* IE and Edge */
+  scrollbar-width: none;
+  /* Firefox */
 }
 
 .homepage::-webkit-scrollbar {
-    display: none;
-    /* Chrome */
+  display: none;
+  /* Chrome */
 }
 
 .library {
-    height: 85%;
-    position: relative;
-    overflow-x: hidden;
-    -ms-overflow-style: none;
-    /* IE and Edge */
-    scrollbar-width: none;
-    /* Firefox */
+  height: 85%;
+  position: relative;
+  overflow-x: hidden;
+  -ms-overflow-style: none;
+  /* IE and Edge */
+  scrollbar-width: none;
+  /* Firefox */
 }
 
 .recommendations {
-    height: 85%;
-    position: relative;
+  height: 85%;
+  position: relative;
 }
 
 .friends-container {
-    padding-bottom: 25%;
-    position: relative
+  padding-bottom: 25%;
+  position: relative;
 }
 
 .swiper {
-    height: 100%;
+  height: 100%;
 }
 
 .library::-webkit-scrollbar {
-    display: none;
-    /* Chrome */
+  display: none;
+  /* Chrome */
 }
 
 .discover {
-    height: 85%;
-    position: relative;
-    overflow: hidden;
+  height: 85%;
+  position: relative;
+  overflow: hidden;
 }
 
 .App {
-    font-family: "Rubik", sans-serif;
-    color: white;
+  font-family: "Rubik", sans-serif;
+  color: white;
 }
 
 @media screen and (min-width: 300px) {
-    body {
-        height: 100vh;
-    }
+  body {
+    height: 100vh;
+  }
 
-    .App {
-        /* Apply some styles */
-        height: 100vh;
-    }
+  .App {
+    /* Apply some styles */
+    height: 100vh;
+  }
 }
 
 .spotify-container {
-    width: 100%;
-    height: 677px;
-    z-index: 100;
-    border-radius: 3px;
-    overflow: auto;
-    -ms-overflow-style: none;
-    /* IE and Edge */
-    scrollbar-width: none;
-    /* Firefox */
+  width: 100%;
+  height: 677px;
+  z-index: 100;
+  border-radius: 3px;
+  overflow: auto;
+  -ms-overflow-style: none;
+  /* IE and Edge */
+  scrollbar-width: none;
+  /* Firefox */
 }
 
 .spotify-container::-webkit-scrollbar {
-    display: none;
-    /* Chrome */
+  display: none;
+  /* Chrome */
 }
 
 .footer {
-    display: flex;
-    background-color: black;
-    color: white;
-    justify-content: space-around;
-    height: 100px;
-    overflow: hidden;
-    position: fixed;
-    border-radius: 3px 3px 3px 3px;
-    width: 90%;
-    padding-bottom: 10px;
+  display: flex;
+  background-color: black;
+  color: white;
+  justify-content: space-around;
+  height: 100px;
+  overflow: hidden;
+  position: fixed;
+  border-radius: 3px 3px 3px 3px;
+  width: 90%;
+  padding-bottom: 10px;
 }
 
 #rec_played_grid {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(3, 1fr);
-    margin: 0 2% 0 2%;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(3, 1fr);
+  margin: 0 2% 0 2%;
 }
 
 .footer_item {
-    padding: 2%;
-    text-align: center;
-    width: 100%;
+  padding: 2%;
+  text-align: center;
+  width: 100%;
 }
 
 .footer_item svg {
-    width: 40%;
-    padding: 0;
-    margin: 0;
+  width: 40%;
+  padding: 0;
+  margin: 0;
 }
 
 .footertext {
-    margin: 0;
-    padding: 0;
-    font-size: 12px;
+  margin: 0;
+  padding: 0;
+  font-size: 12px;
 }
 
 #recently_played_entry {
-    display: flex;
-    background-color: #555555;
-    color: white;
-    margin: 3%;
-    align-items: center;
-    border-radius: 5px;
-    height: 50px;
+  display: flex;
+  background-color: #555555;
+  color: white;
+  margin: 3%;
+  align-items: center;
+  border-radius: 5px;
+  height: 50px;
 
-    width: 95%;
+  width: 95%;
 }
 
 #recently_played_entry img {
-    width: 35%;
-    height: 100%;
+  width: 35%;
+  height: 100%;
 }
 
 .large {
-    font-family: "Rubik", sans-serif;
-    font-weight: 400;
-    font-size: 20px;
-    margin: 10px 0 5px 2%;
+  font-family: "Rubik", sans-serif;
+  font-weight: 400;
+  font-size: 20px;
+  margin: 10px 0 5px 2%;
 }
 
 .sidebysidealbums {
-    display: flex;
-    width: 100%;
-    justify-content: space-between;
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
 }
 
 .sidebysidealbums img {
-    padding: 5%;
+  padding: 5%;
 }
 
 .selected {
-    color: white;
-    fill: white;
-    stroke: white !important;
+  color: white;
+  fill: white;
+  stroke: white !important;
 }
 
 .unselected {
-    stroke: grey !important;
+  stroke: grey !important;
 }
 
 #top {
-    padding-left: 2%;
-    display: flex;
-    font-size: 24px;
-    font-weight: 700;
-    justify-content: space-between;
-    align-content: stretch;
-    width: 100%;
-    padding-top: 3%;
+  padding-left: 2%;
+  display: flex;
+  font-size: 24px;
+  font-weight: 700;
+  justify-content: space-between;
+  align-content: stretch;
+  width: 100%;
+  padding-top: 3%;
 }
 
 .top-greeting {
-    flex-grow: 4;
-    min-width: 200px;
+  flex-grow: 4;
+  min-width: 200px;
 }
 
 .top-icons {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
 }
 
 #top img {
-    width: 85%;
+  width: 85%;
 }
 
 .rec_played_text {
-    margin-left: 5%;
-    margin-right: 5%;
-    font-size: 0.8em;
-    font-family: "Rubik", sans-serif;
-    font-weight: 400;
+  margin-left: 5%;
+  margin-right: 5%;
+  font-size: 0.8em;
+  font-family: "Rubik", sans-serif;
+  font-weight: 400;
 }
 
 .lib_header {
-    margin: 5%;
+  margin: 5%;
 }
 
 .lib-greeting {
-    font-family: "Rubik", sans-serif;
-    font-size: 24px;
-    font-weight: 700;
-    margin-bottom: 0;
+  font-family: "Rubik", sans-serif;
+  font-size: 24px;
+  font-weight: 700;
+  margin-bottom: 0;
 }
 
 .lib-greeting svg {
-    height: 14px;
-    width: 14px;
+  height: 14px;
+  width: 14px;
 }
 
 .lib-greeting p {
-    margin-bottom: 0;
-    margin-top: 15px;
+  margin-bottom: 0;
+  margin-top: 15px;
 }
 
 .lib-sub {
-    font-size: 13px;
-    color: #b3b3b3;
+  font-size: 13px;
+  color: #b3b3b3;
 }
 
 #background {
-    background: conic-gradient(from 182.3deg at 33.11% 13.99%,
-            #000000 -101.25deg,
-            #000000 30deg,
-            #3117d0 101.25deg,
-            #000000 258.75deg,
-            #000000 390deg);
-    background-attachment: fixed;
-    position: fixed;
-    width: 375px;
-    height: 677px;
-    z-index: -1;
-    opacity: 0.9;
+  background: conic-gradient(
+    from 182.3deg at 33.11% 13.99%,
+    #000000 -101.25deg,
+    #000000 30deg,
+    #3117d0 101.25deg,
+    #000000 258.75deg,
+    #000000 390deg
+  );
+  background-attachment: fixed;
+  position: fixed;
+  width: 375px;
+  height: 677px;
+  z-index: -1;
+  opacity: 0.9;
 }
 
 .albumdivleft {
-    margin-right: 0;
-    max-width: 100%;
-    margin-right: 1%;
+  margin-right: 0;
+  max-width: 100%;
+  margin-right: 1%;
 }
 
 .albumdivright {
-    max-width: 100%;
-    margin-left: 1%;
+  max-width: 100%;
+  margin-left: 1%;
 }
 
 .albumdivleft img {
-    width: 100%;
+  width: 100%;
 }
 
 .albumdivright img {
-    width: 100%;
+  width: 100%;
 }
 
 #bottomhome {
-    padding: 0 2% 30% 2%;
+  padding: 0 2% 30% 2%;
 }
 
 .gif {
-    width: 100%;
-    z-index: -10;
-    height: 600px;
+  width: 100%;
+  z-index: -10;
+  height: 600px;
 }
 
 .discover_buttons {
-    position: absolute;
-    width: 10%;
-    z-index: 10;
-    right: 5%;
-    bottom: 5%;
-    text-align: center;
+  position: absolute;
+  width: 10%;
+  z-index: 10;
+  right: 5%;
+  bottom: 5%;
+  text-align: center;
 }
 
 .discover_buttons img {
-    margin: 20%;
+  margin: 20%;
 }
 
 .discover_title {
-    font-size: 24px;
-    margin: 14px 0 0 0;
-    font-weight: 700;
+  font-size: 24px;
+  margin: 14px 0 0 0;
+  font-weight: 700;
 }
 
 .discover_artist {
-    margin: 10px 0 0 0;
+  margin: 10px 0 0 0;
 }
 
 .likes {
-    padding-left: 1%;
-    padding-right: 1%;
-    padding-bottom: 2%;
+  padding-left: 1%;
+  padding-right: 1%;
+  padding-bottom: 2%;
 }
 
 .download svg {
-    color: #b3b3b3;
-    height: 25px;
-    width: 25px;
+  color: #b3b3b3;
+  height: 25px;
+  width: 25px;
 }
 
 .play-button {
-    position: relative;
-    width: 50%;
-    height: 150px;
+  position: relative;
+  width: 50%;
+  height: 150px;
 }
 
 .btn-play svg {
-    position: relative;
-    top: 58%;
-    left: 85%;
-    height: 50px;
-    width: 50px;
+  position: relative;
+  top: 58%;
+  left: 85%;
+  height: 50px;
+  width: 50px;
 }
 
 .like-top {
-    display: flex;
+  display: flex;
 }
 
 #genres {
-    display: flex;
-    justify-content: flex-start;
-    flex-wrap: wrap;
+  display: flex;
+  justify-content: flex-start;
+  flex-wrap: wrap;
 }
 
 .genre {
-    border: 1px solid #b3b3b3;
-    border-radius: 50px;
-    padding-left: 15px;
-    padding-right: 15px;
-    padding-top: 3px;
-    padding-bottom: 5px;
-    font-family: "Rubik", sans-serif;
-    font-weight: 400;
-    margin: 0 5px 8px 0;
+  border: 1px solid #b3b3b3;
+  border-radius: 50px;
+  padding-left: 15px;
+  padding-right: 15px;
+  padding-top: 3px;
+  padding-bottom: 5px;
+  font-family: "Rubik", sans-serif;
+  font-weight: 400;
+  margin: 0 5px 8px 0;
 }
 
 .add_song {
-    display: flex;
+  display: flex;
 }
 
 .add {
-    height: 50px;
-    width: 50px;
-    text-align: center;
-    font-size: 30px;
-    margin: 0 10px 5% 6%;
-    background-color: #393939;
+  height: 50px;
+  width: 50px;
+  text-align: center;
+  font-size: 30px;
+  margin: 0 10px 5% 6%;
+  background-color: #393939;
 }
 
 .add p {
-    padding: 0 0 0 0;
-    margin: 5px 0 0 0;
+  padding: 0 0 0 0;
+  margin: 5px 0 0 0;
 }
 
 .add_text p {
-    font-size: 16px;
-    font-weight: 400;
-    margin: 15px 0 0 5px;
+  font-size: 16px;
+  font-weight: 400;
+  margin: 15px 0 0 5px;
 }
 
 .liked {
-    display: flex;
+  display: flex;
 
-    margin: 0 5% 5% 5%;
-    justify-content: space-between;
+  margin: 0 5% 5% 5%;
+  justify-content: space-between;
 }
 
 .song-info {
-    display: flex;
+  display: flex;
 }
 
 .song-info img {
-    height: 50px;
-    width: 50px;
+  height: 50px;
+  width: 50px;
 }
 
 .song-title {
-    font-size: 16px;
-    font-weight: 700;
+  font-size: 16px;
+  font-weight: 700;
 }
 
 .song-artist {
-    font-size: 12px;
-    color: #b3b3b3;
+  font-size: 12px;
+  color: #b3b3b3;
 }
 
 .song-desc {
-    margin: 10px 0 0 10px;
+  margin: 10px 0 0 10px;
 }
 
 .song-desc p {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
 .likes-icons {
-    display: flex;
-    justify-content: space-between;
-    width: 30%;
-    font-size: 14px;
+  display: flex;
+  justify-content: space-between;
+  width: 30%;
+  font-size: 14px;
 }
 
 .likes-icons {
-    padding: 10px;
+  padding: 10px;
 }
 
-#heartdiv{
-    display: flex;
+#heartdiv {
+  display: flex;
 }
 
 .icon-heart {
-    height: 25px;
+  height: 25px;
 }
 
 .icon-dots {
-    height: 5px;
+  height: 5px;
 }
 
 .discover_body {
-    z-index: 10;
-    position: absolute;
-    display: flex;
-    height: 150px;
-    width: 100%;
-    top: 75%;
-    background: rgb(2, 0, 36);
-    background: linear-gradient(0deg,
-            rgba(2, 0, 36, 0.7763480392156863) 0%,
-            rgba(0, 0, 0, 0) 100%,
-            rgba(78, 78, 157, 1) 100%);
+  z-index: 10;
+  position: absolute;
+  display: flex;
+  height: 150px;
+  width: 100%;
+  top: 75%;
+  background: rgb(2, 0, 36);
+  background: linear-gradient(
+    0deg,
+    rgba(2, 0, 36, 0.7763480392156863) 0%,
+    rgba(0, 0, 0, 0) 100%,
+    rgba(78, 78, 157, 1) 100%
+  );
 }
 
 .discover_bio {
-    position: relative;
+  position: relative;
 
-    top: 30%;
-    left: 5%;
-    right: 5%;
+  top: 30%;
+  left: 5%;
+  right: 5%;
 }
 
 .discover_buttons {
-    position: absolute;
-    margin-bottom: 20px;
-    margin-right: 5%;
+  position: absolute;
+  margin-bottom: 20px;
+  margin-right: 5%;
 }
 
 .discover_buttons img {
-    margin-bottom: 10px;
+  margin-bottom: 10px;
 }
 
 .friend {
-    display: flex;
-    width: 100%;
+  display: flex;
+  width: 100%;
 }
 
 .avatar {
-    height: 40px;
-    width: 40px;
-    margin: 0 10px 0 20px;
-    position: relative;
-    top: 20%;
-    border-radius: 50%;
+  height: 40px;
+  width: 40px;
+  margin: 0 10px 0 20px;
+  position: relative;
+  top: 20%;
+  border-radius: 50%;
 }
 
 .friend-thumb {
-    height: 40px;
-    width: 40px;
+  height: 40px;
+  width: 40px;
 }
 
 .friend_listening {
-    padding: 0 5% 5% 10%;
-    flex-grow: 2;
+  padding: 0 5% 0 10%;
+  flex-grow: 2;
 }
 
 .friend-title {
-    margin: 0 0 5px 0;
-    font-weight: 400;
+  margin: 0 0 5px 0;
+  font-weight: 400;
 }
 
 .friend-artist {
-    margin: 0 0 5px 0;
-    font-size: 10px;
+  margin: 0 0 5px 0;
+  font-size: 10px;
 }
 
 .friend-artist svg {
-    margin: 0 5px 0 0;
+  margin: 0 5px 0 0;
 }
 
 .friend-header {
-    padding: 5%;
+  padding: 5%;
 }
 
 .icon-div {
-    display: flex;
+  display: flex;
 }
 
 .icon-div svg {
-    margin: 0 5px 0 0;
+  margin: 0 5px 0 0;
 }
 
 .icon-div p {
-    margin: 3px 0 0 0;
+  margin: 3px 0 0 0;
 }
 
 .expandBtn svg {
-    height: 24px;
-    width: 24px;
-    color: #b3b3b3;
-    cursor: pointer;
+  height: 24px;
+  width: 24px;
+  color: #b3b3b3;
+  cursor: pointer;
 }
 
 .friend_stats {
-    font-size: 10px;
-    margin: 17px 5% 0 0;
-    float: right;
-    display: flex;
+  font-size: 10px;
+  margin: 17px 5% 0 0;
+  float: right;
+  display: flex;
 }
 
 .friend_stats p {
-    margin: 7px 5px 0 0;
+  margin: 7px 5px 0 0;
 }
 
 .friend_stats svg {
-    margin: 0 5px 0 5px;
+  margin: 0 5px 0 5px;
 }
 
 .reccomended_item {
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 10px;
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 10px;
 }
-.rec_container{
-    display: flex;
+.rec_container {
+  display: flex;
 }
 
 .recommend-thumb {
-    height: 40px;
-    width: 40px;
-    margin: 0 5px 0 0;
+  height: 40px;
+  width: 40px;
+  margin: 0 5px 0 0;
 }
 
 .recommend-body {
-    display: flex;
+  display: flex;
 }
 
 .is_blurred {
-    backdrop-filter: blur(6px);
-    z-index: -1;
+  backdrop-filter: blur(6px);
+  z-index: -1;
 }
 
 /* modals */
 .options {
-    background-color: rgba(99, 99, 99, 0.7);
-    height: inherit;
-    position: absolute;
-    width: 90%;
-    z-index: 999;
-    top: 10%;
-    display: flex;
-    flex-direction: column;
-    transition: all 0.3s linear;
-
+  background-color: rgba(99, 99, 99, 0.7);
+  height: inherit;
+  position: absolute;
+  height: 677px;
+  width: 90%;
+  z-index: 999;
+  top: 10%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  transition: all 0.3s linear;
 }
 
 .options_top {
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    margin-left: 25%;
-    margin-right: 25%;
-    margin-top: 10%;
-    
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  margin-left: 25%;
+  margin-right: 25%;
 }
 
 .options_top p {
-    margin: 0;
-    margin-top: 3%;
-    font-weight: 550;
+  margin: 0;
+  margin-top: 3%;
+  font-weight: 550;
 }
 
-.options_top img {
-    width: 25%;
+.options_thumb {
+  height: 130px;
+  width: 130px;
 }
 
 .options_sel {
-    display: grid;
-    grid-template-columns: repeat(1, 1fr);
-    margin-left: 10%;
-    margin-right: 5%;
-    font-size: 1.2em;
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+  margin-top: 10%;
+  margin-left: 10%;
+  margin-right: 5%;
+  font-size: 1.2em;
 }
 
 .option {
-    display: flex;
+  display: flex;
 }
 
 .option img {
-    width: 8% !important;
-    margin-right: 5%;
+  width: 8% !important;
+  margin-right: 5%;
 }
 
 #options_close {
-    text-align: center;
-    font-weight: 500;
-    font-size: 1em;
-    margin-top: 0%;
+  text-align: center;
+  font-weight: 500;
+  font-size: 1em;
+  margin-top: 0%;
 }
 
 .share_top {
-    display: flex;
-    flex-direction: row;
-    margin-left: 15%;
-    margin-right: 15%;
-    margin-top: 10%;
-    align-items: center;
-    margin-bottom: 10%;
+  display: flex;
+  flex-direction: row;
+  margin-left: 15%;
+  margin-right: 15%;
+  margin-top: 10%;
+  align-items: center;
+  margin-bottom: 10%;
 }
 
 .share_top p {
-    margin: 0;
+  margin: 0;
 }
 
 .share_top img {
-    width: 30% !important;
-    margin-right: 5%;
+  width: 30% !important;
+  margin-right: 5%;
 }
 
 .share_friends {
-    position: relative;
-    display: flex;
-    width: 100%;
-    justify-content: space-between;
-    align-items: center;
+  position: relative;
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .share_picandname {
-    display: flex;
-    align-items: center;
-    white-space: nowrap;
+  display: flex;
+  align-items: center;
+  white-space: nowrap;
 }
 
 .share_picandname img {
-    width: 20% !important;
-    height: 25%;
-    border-radius: 50%;
-    margin-right: 5%;
+  width: 20% !important;
+  height: 25%;
+  border-radius: 50%;
+  margin-right: 5%;
 }
 
 .share_picandname p {
-    font-size: 0.8em;
+  font-size: 0.8em;
 }
 
-
 .share_buttons {
-    padding-left: 5%;
-    padding-right: 5%;
-    padding-top: 5%;
-    padding-bottom: 5%;
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(2, 1fr);
-    text-align: center;
+  padding-left: 5%;
+  padding-right: 5%;
+  padding-top: 5%;
+  padding-bottom: 5%;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  text-align: center;
+}
+
+.friendRecs {
+  padding: 0 5% 5% 5%;
 }
 
 .center {
-    text-align: center;
-    margin-bottom: 5%;
+  text-align: center;
+  margin-bottom: 5%;
 }
 
 .button_container {
-    padding: 1%;
-    margin-bottom: 5%;
+  padding: 1%;
+  margin-bottom: 5%;
 }
 
 .button_container img {
-    width: 50% !important;
+  width: 50% !important;
 }
 
 .button_container p {
-    margin: 0;
+  margin: 0;
 }
 
 .sharebutton {
-    background-color: #03CE17;
-    color: white;
-    border: none;
-    border-radius: 25px;
-    padding-left: 8%;
-    padding-right: 8%;
-    padding-top: 3%;
-    padding-bottom: 3%;   
+  background-color: #03ce17;
+  color: white;
+  border: none;
+  border-radius: 25px;
+  padding-left: 8%;
+  padding-right: 8%;
+  padding-top: 3%;
+  padding-bottom: 3%;
 }
 
-.share_check{
-    height: 50%;
-    width: 20%;
-    filter: invert(100%) hue-rotate(90deg) brightness(1);
+.share_check {
+  height: 50%;
+  width: 20%;
+  filter: invert(100%) hue-rotate(90deg) brightness(1);
 }
 
-.blur{
-    filter: blur(6px);
+.blur {
+  filter: blur(6px);
 }
